--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.5",
     "prettier-vscode": "file:../../.vscode/extensions/esbenp.prettier-vscode-1.8.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -16,7 +17,7 @@
     "server": "node-env-run server --exec nodemon | pino-colada",
     "dev": "run-p server start"
   },
-  "proxy": "http://localhost:/4000",
+  "proxy": "http://localhost:4000",
   "eslintConfig": {
     "extends": "react-app"
   },
